# rip_mit

./: .gitignore  README.md
dalle-server/: .env.example  Makefile  README.md  pyproject.toml
dalle-server/src/: config.py  main.py
dip721/: REAMDME.md
minter/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
minter/.dfx/local/: canister_ids.json  network-id
minter/.dfx/local/canisters/minter_frontend/: index.js
minter/src/declarations/minter_backend/: index.d.ts  index.js  minter_backend.did.d.ts  minter_backend.did.js
minter/src/minter_backend/: Cargo.toml  minter_backend.did
minter/src/minter_backend/src/: lib.rs  types.rs
minter/src/minter_frontend/: package-lock.json  package.json  rollup.config.js  rollup.config.mjs
minter/src/minter_frontend/public/: build  build.js  build.js.map  build.map  bundle.css  global.css  index.html
minter/src/minter_frontend/src/: App.svelte
minter/src/minter_frontend/src/common/: client.js
minter/src/minter_frontend/src/components/: CanisterIds.svelte  MintForm.svelte  WithBackend.svelte
wallet/: .env  Cargo.toml  README.md  deploy.sh  dfx.json  package-lock.json  package.json  webpack.config.js
wallet/src/wallet_backend/: Cargo.toml
wallet/src/wallet_frontend/src/: index.html  index.js
