[tool.poetry]
name = "dalle-server"
version = "0.1.0"
description = ""
authors = ["minwook <minkj1992@gmail.com>"]
readme = "README.md"
packages = [{include = "dalle_server"}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = {extras = ["all"], version = "^0.95.1"}
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
